src/test/resources/frontendReference/invalid/syntaxErr/function/funcExpr2.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 17:13 -- mismatched input '(' expecting {'-', '*', '/', '%', '+', '<', '<=', '>=', '>', '==', '!=', '&&', '||', 'do', '['}
1 parser error(s) detected, no further compilation attempted.
